[tool.poetry]
name = "twitchtube"
version = "1.7.0"
description = ""
authors = ["Chris Champeau <semaj4712@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tk = "^0.1.0"
tkterminal = "^0.1.0"
requests = "^2.28.1"
appdirs = "^1.4.4"
streamlink = "^5.1.2"
tqdm = "^4.64.1"
google-api-python-client = "^2.72.0"
google-auth-oauthlib = "^0.8.0"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"
pyinstaller = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"